<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/background" />

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/activity_main_image_size"
            android:layout_height="@dimen/activity_main_image_size"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/seek" />

        <Button
            android:layout_width="@dimen/activity_main_image_size"
            android:layout_height="@dimen/activity_main_image_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/msg" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/button" />

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/button_lucency"
            android:text="@string/activity_main_button_login"
            android:textColor="@color/activity_main_text_bgcolor"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_text_width"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/activity_main_text_bgcolor"
            android:gravity="center"
            android:text="@string/activity_main_text"
            android:textColor="@color/activity_main_text"
            android:textSize="@dimen/activity_main_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/activity_main_LinearLayout_bgcolor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/activity_main_white"
                android:drawableLeft="@drawable/recommend"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/activity_main_button1" />

            <Button
                android:id="@+id/btn_stockmarket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/activity_main_white"
                android:drawableLeft="@drawable/stockmarket"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/activity_main_button2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_yen_coin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/activity_main_white"
                android:drawableLeft="@drawable/yen_coin"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/activity_main_button3" />

            <Button
                android:id="@+id/btn_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/activity_main_white"
                android:drawableLeft="@drawable/help"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/activity_main_button4" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/activty_main_bg" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:background="@color/activity_main_white" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:id="@+id/home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_home"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:src="@drawable/home" />

                    <TextView
                        android:id="@+id/tv_home"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="首页" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/market"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_market"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:src="@drawable/market" />

                    <TextView
                        android:id="@+id/tv_market"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="行情" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/deal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_deal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:src="@drawable/deal" />

                    <TextView
                        android:id="@+id/tv_deal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="交易" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/consult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_consult"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:src="@drawable/consult" />

                    <TextView
                        android:id="@+id/tv_consult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="咨询" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:src="@drawable/account" />

                    <TextView
                        android:id="@+id/tv_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="账户" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
